# proctor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEBASE_IMPROVEMENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPROVEMENTS.md  LICENSE  Makefile  PROMPT_IMPROVEMENTS.md  README.md  openrouter_models.md  publish_pkg.sh  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-to-pypi.yml  python-package.yml
.specstory/history/: 2025-04-16_01-11-building-python-package-proctor-with-uvicorn.md
docs/: protoc.md
examples/: advanced_knn.py  advanced_usage.py  basic_usage.py  error_handling.py  improved_prompts.py  intro.py
proctor/: README.md  __init__.py  base.py  config.py  utils.py
proctor/decomposition/: techniques.py
proctor/ensembling/: techniques.py
proctor/examples/: advanced_usage.py
proctor/few_shot/: knn_implementation.py  techniques.py
proctor/proctor/: config.py
proctor/proctor/ensembling/: techniques.py
proctor/proctor/few_shot/: techniques.py
proctor/proctor/self_criticism/: techniques.py
proctor/proctor/thought_generation/: techniques.py
proctor/proctor/zero_shot/: techniques.py
proctor/self_criticism/: techniques.py
proctor/thought_generation/: techniques.py
proctor/zero_shot/: techniques.py
scripts/: release.py
tests/: __init__.py  test_config.py  test_knn_implementation.py  test_techniques.py  test_utils.py
