[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proctor"
version = "0.1.0"
authors = [
  {name = "Your Name", email = "your.email@example.com"},
]
description = "A comprehensive package for text-based prompting techniques based on protoc.md"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "litellm>=1.0.0",
    "openai>=1.0.0",
    "python-dotenv>=0.20.0",
    "rich>=13.0.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/proctor"
"Bug Tracker" = "https://github.com/yourusername/proctor/issues" 